Fix session name truncation

--- a/src/popup/styles/NameContainer.scss
+++ b/src/popup/styles/NameContainer.scss
@@ -6,6 +6,7 @@
   width: 100%;
 
   .sessionName {
+    display: block;
     color: #444;
     font-weight: bold;
     font-size: 16px;
@@ -25,6 +26,7 @@
     outline: none;
     padding: 0;
     text-align: left;
+    max-width: 100%;
     &:hover {
       text-decoration: underline;
     }
